--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,11 +8,13 @@ edition = "2018"
 
 [dependencies]
 wgpu = { git = "https://github.com/gfx-rs/wgpu-rs" }
-winit = "0.20.0-alpha5"
+winit = "0.21.0"
 glsl-to-spirv = "0.1"
 rand = "0.7"
 zerocopy = "0.2"
-rayon = "1.1"
+rayon = "1.3"
+nalgebra-glm = "0.5.0"
+obj-rs = "0.5.0"
 
 [dev-dependencies]
 criterion = "0.3"
