--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,8 @@ zerocopy = "0.2"
 rayon = "1.3"
 nalgebra-glm = "0.5.0"
 obj-rs = "0.5.0"
+bytemuck = { version = "1.2", features = ["extern_crate_alloc"] }
+safe-transmute = { git = "https://github.com/nabijaczleweli/safe-transmute-rs" }
 
 [dev-dependencies]
 criterion = "0.3"
