--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,6 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-# wgpu = { git = "https://github.com/gfx-rs/wgpu-rs" }
 wgpu = "0.4"
 winit = "0.21.0"
 glsl-to-spirv = "0.1"
@@ -18,6 +17,8 @@ nalgebra-glm = "0.5.0"
 obj-rs = "0.5.0"
 bytemuck = { version = "1.2", features = ["extern_crate_alloc"] }
 safe-transmute = { git = "https://github.com/nabijaczleweli/safe-transmute-rs" }
+lib3dmol = "0.3.2"
+
 iced = { git ="https://github.com/hecrj/iced" }
 iced_wgpu = { git = "https://github.com/hecrj/iced" }
 iced_winit = { git = "https://github.com/hecrj/iced" }
