--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ bytemuck = { version = "1.2", features = ["extern_crate_alloc"] }
 safe-transmute = { git = "https://github.com/nabijaczleweli/safe-transmute-rs" }
 lib3dmol = "0.3.2"
 crossbeam-utils = "0.7"
+image = "0.23"
 
 iced = { git ="https://github.com/hecrj/iced" }
 iced_wgpu = { git = "https://github.com/hecrj/iced" }
