--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,19 +7,18 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-wgpu = "0.4"
-winit = "0.21.0"
+wgpu = "0.5"
+winit = "0.22"
 glsl-to-spirv = "0.1"
 rand = "0.7"
-zerocopy = "0.2"
 rayon = "1.3"
-nalgebra-glm = "0.5.0"
-obj-rs = "0.5.0"
+nalgebra-glm = "0.7.0"
+obj-rs = "0.6.0"
 bytemuck = { version = "1.2", features = ["extern_crate_alloc"] }
-safe-transmute = { git = "https://github.com/nabijaczleweli/safe-transmute-rs" }
 lib3dmol = "0.3.2"
 crossbeam-utils = "0.7"
 image = "0.23"
+futures = "0.3"
 
 iced = { git ="https://github.com/hecrj/iced" }
 iced_wgpu = { git = "https://github.com/hecrj/iced" }
