--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,13 +12,15 @@ winit = "0.22"
 glsl-to-spirv = "0.1"
 rand = "0.7"
 rayon = "1.3"
-nalgebra-glm = "0.7.0"
+nalgebra-glm = { version = "0.7.0", features = ["serde-serialize"] }
 obj-rs = "0.6.0"
 bytemuck = { version = "1.2", features = ["extern_crate_alloc"] }
 lib3dmol = "0.3.2"
 crossbeam-utils = "0.7"
 image = "0.23"
 futures = "0.3"
+serde = { version = "1.0", features = ["derive"] }
+ron = "0.5.1"
 
 iced = { git ="https://github.com/hecrj/iced" }
 iced_wgpu = { git = "https://github.com/hecrj/iced" }
