Commit ktory vsetko dodrbal

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,3 +35,5 @@ gfx-backend-dx12 = { version = "0.5", path = "../WebGPU-Firefox-Stack/gfx/src/ba
 gfx-backend-dx11 = { version = "0.5", path = "../WebGPU-Firefox-Stack/gfx/src/backend/dx11" }
 gfx-descriptor = { version = "0.1", path = "../WebGPU-Firefox-Stack/gfx-extras/gfx-descriptor" }
 gfx-memory = { version = "0.1", path = "../WebGPU-Firefox-Stack/gfx-extras/gfx-memory" }
+
+dodrbem to
